<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/website_edittext"
        android:layout_width="match_parent"
        android:layout_margin="3dp"
        android:layout_height="wrap_content"
        android:hint="@string/edittext_uri" />

    <Button
        android:id="@+id/open_website_button"
        android:layout_width="match_parent"
        android:layout_margin="3dp"
        android:paddingRight="2dp"
        android:paddingLeft="2dp"
        android:background="@drawable/btn_bg"
        android:textColor="@android:color/white"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:onClick="openWebsite"
        android:text="@string/button_uri" />

    <EditText
        android:id="@+id/location_edittext"
        android:layout_width="match_parent"
        android:layout_margin="3dp"
        android:layout_height="wrap_content"
        android:hint="@string/edittext_uri" />


    <Button
        android:id="@+id/open_location_button"
        android:layout_width="match_parent"
        android:layout_margin="3dp"
        android:paddingRight="2dp"
        android:paddingLeft="2dp"
        android:background="@drawable/btn_bg"
        android:textColor="@android:color/white"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:onClick="openLocation"
        android:text="@string/button_loc" />

    <EditText
        android:id="@+id/share_edittext"
        android:layout_width="match_parent"
        android:layout_margin="3dp"
        android:layout_height="wrap_content"
        android:hint="@string/edittext_share" />

    <Button
        android:id="@+id/share_text_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="3dp"
        android:background="@drawable/btn_bg"
        android:textColor="@android:color/white"
        android:paddingRight="2dp"
        android:paddingLeft="2dp"
        android:textColorHint="@android:color/white"
        android:layout_marginBottom="24dp"
        android:onClick="shareText"
        android:text="@string/button_share"
        />
</LinearLayout>